# atlas-launcher

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Makefile  README.md  directory-structure.txt  panduan-engine.txt  run_windows.bat
.github/workflows/: ci.yml
db/: .gitkeep
scripts/: build.bat  build.sh  setup_compiler.bat  setup_compiler.sh
src/: LICENSE  main.c
src/core/: app.c  app.h  state.c  state.h
src/db/: indexer.c  indexer.h  schema.sql  sqlite.c  sqlite.h
src/icon/: generic_icon.c  generic_icon.h  icns_parser.c  icns_parser.h  icon.c  icon.h  icon_cache.c  icon_cache.h  icon_os_macos.m  pe_parser.c  pe_parser.h
src/platform/: detection.c  detection.h  fs.c  fs.h  platform.c  platform.h  platform_macos.m
src/render/: draw2d.c  draw2d.h  gl_render.c  gl_render.h  platform_text_macos.m  platform_text_windows.c  texture.c  texture.h
src/search/: ranking.c  ranking.h  search.c  search.h
src/ui/: input.c  input.h  ui.c  ui.h
